<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDarkBlue"
    tools:context=".activity.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goBack"
            android:src="@drawable/btn_nav_back_pressed" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="?android:attr/actionBarSize"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/sign_up_splash_text"
            android:textColor="@color/colorYellow"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/custom_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:src="@drawable/icon_pic_normal" />

            <EditText
                android:id="@+id/et_user_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="29dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/selector_edit_text"
                android:drawableStart="@drawable/icon_name_normal"
                android:drawablePadding="16dp"
                android:hint="@string/first_name_edit_text"
                android:inputType="textPersonName"
                android:textColor="#212128" />

            <EditText
                android:id="@+id/et_user_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/selector_edit_text"
                android:drawableStart="@drawable/icon_name_normal"
                android:drawablePadding="16dp"
                android:hint="@string/last_name_edit_text"
                android:inputType="textPersonName"
                android:textColor="#212128" />

            <EditText
                android:id="@+id/et_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/selector_edit_text"
                android:drawableStart="@drawable/icon_mail_pressed"
                android:drawablePadding="16dp"
                android:hint="@string/email_edit_text_hint"
                android:inputType="textEmailAddress"
                android:textColor="#212128" />

            <EditText
                android:id="@+id/et_user_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/selector_edit_text"
                android:drawableStart="@drawable/icon_mobile_normal"
                android:drawablePadding="16dp"
                android:hint="@string/mobile_number_edit_text"
                android:inputType="number"
                android:textColor="#212128" />

            <EditText
                android:id="@+id/et_user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/selector_edit_text"
                android:drawableStart="@drawable/icon_home_normal"
                android:drawablePadding="16dp"
                android:hint="@string/home_address_edit_text"
                android:inputType="textPostalAddress"
                android:textColor="#212128" />


            <EditText
                android:id="@+id/et_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/selector_edit_text"
                android:drawableStart="@drawable/icon_password_pressed"
                android:drawablePadding="16dp"
                android:hint="@string/password_edit_text_hint"
                android:inputType="textPassword"
                android:textColor="#212128" />

            <EditText
                android:id="@+id/et_user_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/selector_edit_text"
                android:drawableStart="@drawable/icon_password_pressed"
                android:drawablePadding="16dp"
                android:hint="@string/confirm_password_edit_text"
                android:inputType="textPassword"
                android:textColor="#212128" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cb_terms"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:buttonTint="@color/colorWhite"
                android:gravity="center"
                android:text="@string/i_accept_the_terms"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/selector_sign_in_button"
                android:fontFamily="sans-serif"
                android:text="@string/sign_up_button"
                android:textAllCaps="false"
                android:textColor="#0a2233"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>