<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundDarkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_nav_back_pressed"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="Profile"
            android:textColor="@color/colorYellow"
            android:textSize="20sp"
            android:layout_marginEnd="?android:attr/actionBarSize"/>

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/user_image_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="119dp"
        android:src="@drawable/placeholder_user_profile"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"

        android:layout_marginBottom="8dp"
        android:src="@drawable/btn_edit_pic_pressed"
        app:layout_constraintBottom_toBottomOf="@+id/user_image_home"
        app:layout_constraintEnd_toEndOf="@+id/user_image_home" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/user_image_home"
        android:layout_marginTop="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_user_profile"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="8dp"
                android:layout_marginTop="4dp"
                android:text="USER INFORMATION"
                android:textColor="@color/colorBackgroundDarkBlue"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorBackgroundDarkBlue"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_user_first_name_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-condensed-light"
                android:background="@drawable/selector_edit_text"
                android:drawableStart="@drawable/icon_name_normal"
                android:drawablePadding="16dp"
                android:textColorHint="@color/colorBackgroundDarkBlue"
                android:hint="@string/first_name_edit_text"
                android:inputType="textPersonName"
                android:textColor="#212128" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/colorBackgroundDarkBlue"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_user_last_name_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:background="@drawable/selector_edit_text"
                android:drawableStart="@drawable/icon_name_normal"
                android:drawablePadding="16dp"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/last_name_edit_text"
                android:textColorHint="@color/colorBackgroundDarkBlue"
                android:inputType="textPersonName"
                android:textColor="#212128" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/colorBackgroundDarkBlue"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_user_email_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:background="@drawable/selector_edit_text"
                android:drawableStart="@drawable/icon_mail_pressed"
                android:drawablePadding="16dp"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/email_edit_text_hint"
                android:textColorHint="@color/colorBackgroundDarkBlue"
                android:inputType="textEmailAddress"
                android:textColor="#212128" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/colorBackgroundDarkBlue"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_user_contact_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-condensed-light"
                android:background="@drawable/selector_edit_text"
                android:drawableStart="@drawable/icon_mobile_normal"
                android:drawablePadding="16dp"
                android:hint="@string/mobile_number_edit_text"
                android:textColorHint="@color/colorBackgroundDarkBlue"
                android:inputType="number"
                android:textColor="#212128" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/colorBackgroundDarkBlue"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_user_password_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-condensed-light"
                android:background="@drawable/selector_edit_text"
                android:drawableStart="@drawable/icon_password_pressed"
                android:drawablePadding="16dp"
                android:hint="@string/password_edit_text_hint"
                android:textColorHint="@color/colorBackgroundDarkBlue"
                android:inputType="textPassword"
                android:textColor="#212128" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_sign_out_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/selector_home_button"
        android:text="Sign Out"
        android:textColor="@color/colorWhite"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


</android.support.constraint.ConstraintLayout>